Fix tiny list layout bug

--- a/css/default.css
+++ b/css/default.css
@@ -1081,6 +1081,7 @@ a:hover {
     display: block;
     left: -1.375em;
     width: 0.75em;
+    height: 1.25em;
     padding: 1px 0 0 0;
 }
 
